Git Tests/force-app/main/default/default/objects/Opportunity/fields/TabulacaoN2__c.field-meta.xml
<CustomField>
    <fullName>TabulacaoN2__c</fullName>
    <inlineHelpText>Este campo é o segundo refinamento do valor do campo Status</inlineHelpText>
    <label>Tabulação N2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>TabulacaoN1__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cotação Enviada TT</fullName>
            </value>
            <value>
                <fullName>Cotação Enviada Parcial</fullName>
            </value>
            <value>
                <fullName>Fora de Malha</fullName>
            </value>
            <value>
                <fullName>Falta de estoque</fullName>
            </value>
            <value>
                <fullName>Não temos o item no portifólio</fullName>
            </value>
            <value>
                <fullName>Não temos a apresentação solicitada</fullName>
            </value>
            <value>
                <fullName>Não temos a validade solicitada</fullName>
            </value>
            <value>
                <fullName>Não temos a quantidade solicitada</fullName>
            </value>
            <value>
                <fullName>Não trabalhamos</fullName>
            </value>
            <value>
                <fullName>Não conseguimos atender no prazo solicitado</fullName>
            </value>
            <value>
                <fullName>Não atinge o faturamento mínimo</fullName>
            </value>
            <value>
                <fullName>Área Restrita / Regionalização</fullName>
            </value>
            <value>
                <fullName>Bloqueio Financeiro</fullName>
            </value>
            <value>
                <fullName>Cotação Vencida</fullName>
            </value>
            <value>
                <fullName>BU Material</fullName>
            </value>
            <value>
                <fullName>BU Genérico</fullName>
            </value>
            <value>
                <fullName>BU Especialidade</fullName>
            </value>
            <value>
                <fullName>Envio Automático</fullName>
            </value>
            <value>
                <fullName>BLACK LIST</fullName>
                <isActive>false</isActive>
                <label>BLACK LIST</label>
            </value>
            <value>
                <fullName>NÃO É CLIENTE ALVO</fullName>
                <isActive>false</isActive>
                <label>NÃO É CLIENTE ALVO</label>
            </value>
            <value>
                <fullName>Outro Distribuidor</fullName>
                <isActive>false</isActive>
                <label>Outro Distribuidor</label>
            </value>
            <value>
                <fullName>PARCIAL</fullName>
                <isActive>false</isActive>
                <label>PARCIAL</label>
            </value>
            <value>
                <fullName>Preço melhor do concorrente</fullName>
                <isActive>false</isActive>
                <label>Preço melhor do concorrente</label>
            </value>
            <value>
                <fullName>TODOS OS ITENS - NÃO CONSEGUIMOS ATENDER NO PRAZO SOLICITADO</fullName>
                <isActive>false</isActive>
                <label>TODOS OS ITENS - NÃO CONSEGUIMOS ATENDER NO PRAZO SOLICITADO</label>
            </value>
            <value>
                <fullName>TODOS OS ITENS - NÃO TRABALHAMOS</fullName>
                <isActive>false</isActive>
                <label>TODOS OS ITENS - NÃO TRABALHAMOS</label>
            </value>
            <value>
                <fullName>TODOS OS ITENS FORA DE MALHA</fullName>
                <isActive>false</isActive>
                <label>TODOS OS ITENS FORA DE MALHA</label>
            </value>
            <value>
                <fullName>TODOS OS ITENS FORA DO PORTFOLIO</fullName>
                <isActive>false</isActive>
                <label>TODOS OS ITENS FORA DO PORTFOLIO</label>
            </value>
            <value>
                <fullName>TODOS OS ITENS SEM A APRESENTAÇÃO SOLICITADA</fullName>
                <isActive>false</isActive>
                <label>TODOS OS ITENS SEM A APRESENTAÇÃO SOLICITADA</label>
            </value>
            <value>
                <fullName>TODOS OS ITENS SEM A QUANTIDADE SOLICITADA</fullName>
                <isActive>false</isActive>
                <label>TODOS OS ITENS SEM A QUANTIDADE SOLICITADA</label>
            </value>
            <value>
                <fullName>TODOS OS ITENS SEM A VALIDADE SOLICITADA</fullName>
                <isActive>false</isActive>
                <label>TODOS OS ITENS SEM A VALIDADE SOLICITADA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>