Git Tests/force-app/main/default/default/objects/Opportunity/fields/TermosCliente__c.field-meta.xml
<CustomField>
    <fullName>TermosCliente__c</fullName>
    <label>Termos do Cliente</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>