Git Tests/force-app/main/default/default/objects/Opportunity/fields/TipoFrete__c.field-meta.xml
<CustomField>
    <fullName>TipoFrete__c</fullName>
    <label>Frete</label>
    <length>255</length>
    <type>Text</type>
</CustomField>