Git Tests/force-app/main/default/default/objects/Opportunity/fields/TotalPortal__c.field-meta.xml
<CustomField>
    <fullName>TotalPortal__c</fullName>
    <label>Total Portal</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>