Git Tests/force-app/main/default/default/objects/Opportunity/fields/ValorFrete__c.field-meta.xml
<CustomField>
    <fullName>ValorFrete__c</fullName>
    <label>Valor do frete</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>