Git Tests/force-app/main/default/default/objects/Opportunity/fields/Vendedor__c.field-meta.xml
<CustomField>
    <fullName>Vendedor__c</fullName>
    <inlineHelpText>Vendedor / Vendedor Externo</inlineHelpText>
    <label>Representante VDE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>