Git Tests/force-app/main/default/default/objects/Opportunity/fields/VendedorSuporte__c.field-meta.xml
<CustomField>
    <fullName>VendedorSuporte__c</fullName>
    <inlineHelpText>Vendedor Interno / Vendedor Suporte</inlineHelpText>
    <label>Representante VDI/VDS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>