Git Tests/force-app/main/default/default/objects/Opportunity/recordTypes/Orcamento.recordType-meta.xml
<RecordType>
    <fullName>Orcamento</fullName>
    <active>true</active>
    <businessProcess>Status do orçamento</businessProcess>
    <label>Orçamento normal</label>
</RecordType>