Git Tests/force-app/main/default/default/objects/Opportunity/recordTypes/OrcamentoContaOrdem.recordType-meta.xml
<RecordType>
    <fullName>OrcamentoContaOrdem</fullName>
    <active>true</active>
    <businessProcess>Status do orçamento</businessProcess>
    <label>Orçamento conta e ordem</label>
</RecordType>