Git Tests/force-app/main/default/default/objects/Opportunity/recordTypes/OrcamentoPortal.recordType-meta.xml
<RecordType>
    <fullName>OrcamentoPortal</fullName>
    <active>true</active>
    <businessProcess>Portal de Cotações</businessProcess>
    <label>Orçamento do Portal</label>
    <!---->
    <!---->
</RecordType>