Git Tests/force-app/main/default/default/objects/Opportunity/validationRules/Orcamento_EditarCancelado.validationRule-meta.xml
<ValidationRule>
    <fullName>Orcamento_EditarCancelado</fullName>
    <active>true</active>
    <description>Não permitir que o usuário altere o orçamento quando ele está cancelado</description>
    <errorConditionFormula>AND(
				NOT(ISNEW()),  
				$Profile.Name != &apos;Administrador do sistema&apos;,
				$Profile.Name != &apos;System Administrator&apos;,				
				ISPICKVAL( PRIORVALUE(StageName), &apos;Cancelada&apos;) 
	         || ISPICKVAL( PRIORVALUE(StageName), &apos;Sem Retorno&apos;)
	         || ISPICKVAL( PRIORVALUE(StageName), &apos;Não Respondida&apos;)
	         || ISPICKVAL( PRIORVALUE(StageName), &apos;Não Ganha&apos;)
)</errorConditionFormula>
    <errorMessage>Não é possível alterar orçamentos Cancelados, Sem Retorno, Não Respondidos ou Não Ganhos.</errorMessage>
</ValidationRule>