Git Tests/force-app/main/default/default/objects/Opportunity/validationRules/Orcamento_EditarStatus.validationRule-meta.xml
<ValidationRule>
    <fullName>Orcamento_EditarStatus</fullName>
    <active>false</active>
    <description>Não permitir que o usuário altere manualmente o status do orçamento para &quot;Aguardando aprovação&quot; e &quot;Aprovado&quot;. Apenas o status &quot;Fechado/ganho&quot; e &quot;Fechado/perdido&quot; pode ser editado pelo usuário.</description>
    <errorConditionFormula>AND(
ISCHANGED(StageName), 
OR(
ISPICKVAL(StageName, &apos;Aguardando aprovação&apos;),
ISPICKVAL(StageName, &apos;Aprovado&apos;))
)</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>Não é possível alterar manualmente o status do orçamento para &quot;Aguardando aprovação&quot; ou &quot;Aprovado&quot;.</errorMessage>
</ValidationRule>