Git Tests/force-app/main/default/default/objects/Opportunity/validationRules/Orcamento_NaoPermitirCaracteresEspeciais.validationRule-meta.xml
<ValidationRule>
    <fullName>Orcamento_NaoPermitirCaracteresEspeciais</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
!ISBLANK(Description),
!REGEX(Description, &quot;[a-zA-Z0-9\\s]+&quot;)
)</errorConditionFormula>
    <errorMessage>Não é permitido caracteres especiais.</errorMessage>
</ValidationRule>