Git Tests/force-app/main/default/default/objects/Opportunity/validationRules/Orcamento_StatusPermitidoCancelar.validationRule-meta.xml
<ValidationRule>
    <fullName>Orcamento_StatusPermitidoCancelar</fullName>
    <active>true</active>
    <description>Não permitir que o usuário altere o orçamento quando ele está cancelado</description>
    <errorConditionFormula>AND(
				$Profile.Name != &apos;Administrador do sistema&apos;,
				$Profile.Name != &apos;System Administrator&apos;,
				ISCHANGED(StageName),
				ISPICKVAL(StageName, &apos;Cancelada&apos;),
				NOT(ISPICKVAL(PRIORVALUE(StageName), &apos;Novo&apos;)),
				NOT(ISPICKVAL(PRIORVALUE(StageName), &apos;Em digitação&apos;)),
				NOT(ISPICKVAL(PRIORVALUE(StageName), &apos;Aguardando Integração&apos;)),
				NOT(ISPICKVAL(PRIORVALUE(StageName), &apos;Respondida&apos;))



)</errorConditionFormula>
    <errorMessage>Só é possível cancelar o orçamento no status &quot;Novo&quot; ou &quot;Em digitação&quot; ou &quot;Aguardando Integração&quot; ou &quot;Respondida&quot;</errorMessage>
</ValidationRule>