Git Tests/force-app/main/default/default/objects/Opportunity/validationRules/Orcamento_ValidarCampoStatus.validationRule-meta.xml
<ValidationRule>
    <fullName>Orcamento_ValidarCampoStatus</fullName>
    <active>false</active>
    <description>Não permitir que o usuário comercial crie um orçamento com o status diferente de &quot;Novo&quot;.</description>
    <errorConditionFormula>AND(
				ISNEW(),
				NOT(ISPICKVAL(StageName, &apos;Novo&apos;)),
				$Profile.Name != &apos;Administrador do sistema&apos;
)</errorConditionFormula>
    <errorMessage>Não é possível inserir um valor diferente de &quot;Novo&quot; no Status.</errorMessage>
</ValidationRule>